fix skills alignment

--- a/style.css
+++ b/style.css
@@ -265,6 +265,7 @@ section {
 
 #about {
   position: relative;
+  padding: 15px;
 }
 
 .about-containers {
@@ -289,7 +290,7 @@ section {
 
 .arrow {
   position: absolute;
-  right: -5rem;
+  right: 0rem;
   bottom: 2.5rem;
 }
 
@@ -314,20 +315,21 @@ section {
   margin: auto 0;
 }
 
-/* EXPERIENCE SECTION */
+/* Skills SECTION */
 
-#experience {
+#skill {
   position: relative;
+  padding: 15px;
 }
 
-.experience-sub-title {
+.skill-sub-title {
   color: rgb(85, 85, 85);
   font-weight: 600;
   font-size: 1.75rem;
   margin-bottom: 2rem;
 }
 
-.experience-details-container {
+.skill-details-container {
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -344,7 +346,7 @@ section {
 
 article {
   display: flex;
-  width: 10rem;
+  width: 15rem;
   /* justify-content: space-around; */
   gap: 0.5rem;
 }
@@ -357,6 +359,7 @@ article .icon {
 
 #projects {
   position: relative;
+  padding: 15px;
 }
 
 .color-container {
@@ -383,6 +386,7 @@ article .icon {
 /* CONTACT */
 
 #contact {
+  padding: 5px;
   display: flex;
   justify-content: center;
   flex-direction: column;
